# Mini--Vim

./: CMakeLists.txt  README.md
src/: buffer.cpp  buffer.h  editor.cpp  editor.h  main.cpp  renderer.cpp  renderer.h  terminal.cpp  terminal.h
